Bug 360516 - Locked transparency mask position doesn't stay locked while moving parent layer
Summary: Locked transparency mask position doesn't stay locked while moving parent layer
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Layer Stack (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2016-03-14 12:08 UTC by Raghavendra kamath
Modified: 2016-05-25 13:14 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raghavendra kamath 2016-03-14 12:08:21 UTC
If we want to move a layer but not the transparency masks, we often lock the transparency mask and hide it . but in recent 3.0 alpha git , moving the layer also moves the locked transparency mask too.

Reproducible: Always

Steps to Reproduce:
1.open Krita and create a new document
2.scribble something and make a selection then add a transparency mask, then lock and hide this transparency mask
3.now move the parent layer , then unhide and unlock the transparency mask

Actual Results:  
the transparency mask gets moved even if it is locked down

Expected Results:  
the tranparency mask should be intact in same place
Comment 1 Halla Rempt 2016-04-16 13:52:42 UTC
https://phabricator.kde.org/T2302
Comment 2 Dmitry Kazakov 2016-05-25 13:14:22 UTC
Git commit 74f4334ad7b0e0bf74438886b57bbe65e4464fc9 by Dmitry Kazakov.
Committed on 25/05/2016 at 13:14.
Pushed by dkazakov into branch 'master'.

Don't try to move non-editable nodes

Fixes T2302

M  +6    -2    plugins/tools/basictools/strokes/move_stroke_strategy.cpp

http://commits.kde.org/krita/74f4334ad7b0e0bf74438886b57bbe65e4464fc9