Don't try to move non-editable nodes

Fixes T2302
BUG:360516